test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics --no-experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
DIFF------------------------------
.program:
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
DIFF------------------------------
.program:
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
<<<<<<< HEAD
    Finished debug [unoptimized + fuel] target(s) [56 B] in ???
=======
DIFF------------------------------
.program:
DIFF------------------------------
.program:
.0                                      ; --- start of function: __entry ---
move $$locbase $sp                      ; save locals base register for function __entry
cfei i0                                 ; allocate 0 bytes for locals and 0 slots for call arguments
.4
fncall .2                               ; [call]: call main_0
 move $r1 $zero                          ; [call]: return unit value
 movi $r1 i0                             ; [call]: return unit value
retd $zero $zero
DIFF------------------------------
.program:
.2                                      ; --- start of function: main_0 ---
pusha .2                                ; save all registers
move $$locbase $sp                      ; save locals base register for function main_0
cfei i0                                 ; allocate 0 bytes for locals and 0 slots for call arguments
.5
ji  .3
.3
cfsi i0                                 ; free 0 bytes for locals and 0 slots for extra call arguments
popa .2                                 ; restore all registers
jal $zero $$reta i0                     ; return from call
    Finished debug [unoptimized + fuel] target(s) [64 B] in ???
>>>>>>> ef4a6e047 (more operators for const_propagate)
